--- a/x5.plist
+++ b/x5.plist
@@ -11,42 +11,20 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://x5.justep.com/apps/x5.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://x5.justep.com/apps/x5.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://x5.justep.com/apps/x5.png</string>
+					<string>http://life.wuxibigdata.com/tabViewController.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.justep.x5.demo</string>
+				<string>com.lelife.test1</string>
 				<key>bundle-version</key>
-				<string>5.3.2</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>X5 App download</string>
+				<string>tabViewController.ipa</string>
 			</dict>
-                       <key>NSAppTransportSecurity</key>
-			<dict>
-    			<!—彻底倒退回不安全HTTP网络请求，能任意进行HTTP请求 —>
-   			 <key>NSAllowsArbitraryLoads</key>
-   			 <true/>
- 		      </dict>
 		</dict>
 	</array>
 </dict>
