--- a/x5_old.plist
+++ b/x5_old.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>lsh.js.cn</string>
+				<string>com.lelife.LeLife</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
